<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/detailedElement"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="#F3F3F3"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/detailedName"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="6dp"
            android:layout_weight="4"
            android:background="@color/white"
            android:gravity="center_vertical" />

        <TextView
            android:id="@+id/detailedTimeRemaining"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/detailedDetails"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/detailedInnerDetails"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/detailedTaskDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/taskdate"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/detailedPrimaryObjectives"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/primaryobjectives"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/detailedLongTimeRemaining"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timeremaining"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>